--- a/act/HTML/login.html
+++ b/act/HTML/login.html
@@ -4,84 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio Sesión TaskLink</title>
-    <link rel="stylesheet" href="../CSS/index.css" type="text/css" />
+    <link rel="stylesheet" href="../CSS/login.css" type="text/css" />
   </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <img src="../../img/Imagen.png" alt="Imagen Lateral" />
-      </div>
-      <section class="datos">
-        <img src="../../img/logo.png" />
-        <h3>Servicios Recomendados</h3>
-        <div class="contenedorInicio">
-          <p>Correo</p>
-          <input type="email" class="inputMail" />
-          <p>Contraseña</p>
-          <input type="password" class="inputContra" />
 
-          <input type="submit" value="Entrar" class="btnEntrar" />
-        </div>
-
-        <figure class="lineaSeparacion">
-          <p>O</p>
-        </figure>
-        <div class="btnInicios">
-          <input class="btnGoogle" type="submit" value="Continuar con Google" />
-          <input class="btnApple" type="submit" value="Continuar con Apple" />
-          <strong>¿Has olvidado la contraseña?</strong>
-        </div>
-      </section>
-    </div>
-    <footer>
-      <p>¿No tienes una cuenta?<a href="">Registrate</a></p>
-    </footer>
-  </body>
-</html>
-<!--<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio de Sesión TaskLink</title>
-    <link rel="stylesheet" href="../CSS/index.css" type="text/css" />
-  </head>
   <body>
-    <div class="container">
+    <div class="contenedor">
       <aside class="sidebar">
-        <img src="../../img/Imagen.png" alt="Imagen lateral" />
+        <img src="../../img/InicioSesion.png" alt="Imagen Lateral" />
       </aside>
-
       <section class="datos">
-        <img src="../../img/logo.png" alt="Logo TaskLink" />
-        <h3>Servicios Recomendados</h3>
+        <form action="./index.html" class="contenedorInicio">
+          <p class="textInicioSesion">Iniciar Sesión en <strong>TaskLink</strong></p>
+          <div class="contenedorEmail">
+            <img src="../../svg/usuario.svg" class="iconoEmail" />
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="inputMail"
+              placeholder="Correo Electrónico"
+              required
+            />
+          </div>
+          <div class="contenedorContrasenya">
+            <img src="../../svg/contrasenya.svg" class="iconoContrasnya" />
 
-
-        <form action="/login" method="POST" class="contenedorInicio">
-          <label for="email">Correo</label>
-          <input type="email" id="email" name="email" class="inputMail" required />
-
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" class="inputContra" required />
+            <input
+              type="password"
+              id="contrasenya"
+              name="contrasenya"
+              class="inputContra"
+              placeholder="Contraseña"
+              required
+            />
+          </div>
 
           <input type="submit" value="Entrar" class="btnEntrar" />
+
+          <div class="contenedorOlvidarContra">
+            <strong><a href=""></a> ¿Has olvidado la contraseña?</strong>
+          </div>
         </form>
 
-        <figure class="lineaSeparacion">
-          <p>O</p>
-        </figure>
+        <div class="lineaSeparacion">
+          <hr class="lineaPrincipio" />
+          O
+          <hr class="lineaFinal" />
+        </div>
 
         <div class="btnInicios">
-          <a href="/auth/google" class="btnGoogle">Continuar con Google</a>
-          <a href="/auth/apple" class="btnApple">Continuar con Apple</a>
-          <strong><a href="/recuperar-contrasena">¿Has olvidado la contraseña?</a></strong>
+          <div class="contenedorGoogle">
+            <img src="../../svg/google.svg" class="iconoGoogle" />
+            <input
+              class="btnGoogle"
+              type="submit"
+              value="Continuar con Google"
+            />
+          </div>
+          <div class="contenedorApple">
+            <img src="../../svg/apple.svg" class="iconoContrasnya" />
+            <input class="btnApple" type="submit" value="Continuar con Apple" />
+          </div>
+          <div class="contenedorRegistrarse">
+            <form action="./register.html">
+            <input class="btnCrearCuenta" type="submit" value="Crear una Cuenta" />
+            </form>
+          </div>
         </div>
+        <div class="logo">
+          <img src="../../img/logo.png" alt="logo TaskLink" />
+          <p>También puede <a href="">denunciar ofertas que no son apropiadas</a> en tu pais sin iniciar sesión</p>
+        </div>
+        <footer>Español (España) © 2025 TaskLink from Alex&Gabi</footer>
       </section>
     </div>
-
-    <footer>
-      <p>¿No tienes una cuenta? <a href="/registro">Regístrate</a></p>
-    </footer>
   </body>
 </html>
--->
