Subir cambios relacionados con el perfil

--- a/act/HTML/perfil.html
+++ b/act/HTML/perfil.html
@@ -38,10 +38,22 @@
           <p>Soy una persona muy trabajadora y que le gusta mucho su trabajo</p>
         </div>
         <div class="infoUsuarioValoraciones">
-          <div class="infoTrabajos">3 Trabajos realizados</div>
-          <div class="infoTrabajos">2 Respuestas</div>
+          <div class="infoTrabajos">
+            3 Trabajos realizados
+            <hr />
+          </div>
+
+          <div class="infoTrabajos">
+            2 Respuestas
+            <hr />
+          </div>
+
           <div class="infoTrabajos">12 Años En TaskLink</div>
         </div>
+      </div>
+      <hr class="separadorInterior">
+      <div>
+
       </div>
       <section>
         <div></div>
