--- a/act/HTML/index.html
+++ b/act/HTML/index.html
@@ -102,7 +102,7 @@
         <p><i>Proximamente...</i></p>
     </div>
     <footer>
-        © 2025 TaskLink, Inc  ·  Privacidad  ·  Mapa del sitio  ·  Datos de la empresa
+        Español (España) © 2025 TaskLink from Alex&Gabi
     </footer>
 </body>
 </html>
