Subir cambios relacionados con el login, register

--- a/act/HTML/perfil.html
+++ b/act/HTML/perfil.html
@@ -18,9 +18,10 @@
     <div class="contenedor">
       <aside class="sidebar">
         <h2>Datos Perfil</h2>
-        <div class="menu-item">
+        <div class="menu-item" >
           <img src="../../img/imagenPerfilRedonda.png" class="imagenPerfil" />
-          <h3>Datos Prueba 1</h3>
+          <h3>Perfil Usuario</h3>
+
         </div>
         <div class="menu-item">
           <img src="../../img/imagenPerfilRedonda.png" class="imagenPerfil" />
