Cambio flexbox por float y README añadido

--- a/act/HTML/index.html
+++ b/act/HTML/index.html
@@ -20,7 +20,7 @@
         <div class="right-header">
             <span class="texto-servicios">Ofrecer Servicios</span>
             <div class="icono-perfil">
-                <img src="../../img/imagenPerfilRedonda.png" class="profile-icon">
+                <img src="../../img/imagenPerfilRedonda.png" class="profile-icon"></div>
             </div>
         </div>
     </header>
