--- a/act/HTMLGRID/register.html
+++ b/act/HTMLGRID/register.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio Sesión TaskLink</title>
-    <link rel="stylesheet" href="../CSSGRID/login.css" type="text/css" />
+    <link rel="stylesheet" href="../CSSGRID/register.css" type="text/css" />
   </head>
 
   <body>
+    <header>
+      <img src="../../img/Registrarse.png" alt="Imagen Superior" />
+    </header>
     <div class="contenedor">
-      <aside class="sidebar">
-        <img src="../../img/InicioSesion.png" alt="Imagen Lateral" />
-      </aside>
       <section class="datos">
-        <form action="../HTML/index.html" class="contenedorInicio">
-          <p class="textInicioSesion">Iniciar Sesión en <strong>TaskLink</strong></p>
+        <form action="./index.html" class="contenedorInicio">
+          <p class="textRegistrarse">
+            Empieza a usar <strong>TaskLink</strong>
+          </p>
           <div class="contenedorEmail">
             <img src="../../svg/usuario.svg" class="iconoEmail" />
             <input
@@ -35,6 +37,18 @@
               name="contrasenya"
               class="inputContra"
               placeholder="Contraseña"
+              required
+            />
+          </div>
+          <div class="contenedorRepContra">
+            <img src="../../svg/contrasenya.svg" class="iconoRepContra" />
+
+            <input
+              type="password"
+              id="RepContra"
+              name="RepContra"
+              class="inputRepContra"
+              placeholder="Repite la Contraseña"
               required
             />
           </div>
@@ -65,15 +79,14 @@
             <img src="../../svg/apple.svg" class="iconoApple" />
             <input class="btnApple" type="submit" value="Continuar con Apple" />
           </div>
-          <div class="contenedorRegistrarse">
-            <form action="../HTMLGRID/register.html">
-            <input class="btnCrearCuenta" type="submit" value="Crear una Cuenta" />
-            </form>
-          </div>
         </div>
         <div class="logo">
           <img src="../../img/logo.png" alt="logo TaskLink" />
-          <p>También puede <a href="">denunciar ofertas que no son apropiadas</a> en tu pais sin iniciar sesión</p>
+          <p>
+            También puede
+            <a href="">denunciar ofertas que no son apropiadas</a> en tu pais
+            sin iniciar sesión
+          </p>
         </div>
         <footer>Español (España) © 2025 TaskLink from Alex&Gabi</footer>
       </section>
