--- a/act/HTMLGRID/index.html
+++ b/act/HTMLGRID/index.html
@@ -39,7 +39,7 @@
         <h2>OFERTAS ACTUALES</h2>
         <section class="courses">
             <div class="course">
-                <img src="../../img/image1.png" alt="Diseñador">
+                <img src="../../img/image1.jpg" alt="Diseñador">
                 <h3>Diseñador</h3>
                 <p>Busco diseñador gráfico para proyecto web.</p>
                 <div class="course-footer">
