Subir cambios relacionados con las imagenes

--- a/act/HTMLGRID/index.html
+++ b/act/HTMLGRID/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="course">
-                <img src="../../img/img2.png" alt="Limpieza">
+                <img src="../../img/img2.jpg" alt="Limpieza">
                 <h3>Limpieza</h3>
                 <p>Se necesita personal para limpieza de oficinas.</p>
                 <div class="course-footer">
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="course">
-                <img src="../../img/img3.png" alt="Diseñador">
+                <img src="../../img/img3.jpg" alt="Diseñador">
                 <h3>Diseñador</h3>
                 <p>Busco diseñador gráfico para proyecto web.</p>
                 <div class="course-footer">
