--- a/act/HTML/index.html
+++ b/act/HTML/index.html
@@ -1,108 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TaskLink</title>
-    <link rel="stylesheet" href="../CSS/index.css">
-    
-</head>
+    <link rel="stylesheet" href="../CSS/index.css" />
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <div class="logo-container">
-            <img src="../../img/logo.png" alt="TaskLink Logo" class="logo-icon">
-        </div>
+      <div class="logo-container">
+        <img src="../../img/logo.png" alt="TaskLink Logo" class="logo-icon" />
+      </div>
 
-        <div class="right-header">
-            <span class="texto-servicios">Ofrecer Servicios</span>
-            <div class="icono-perfil">
-                <img src="../../img/imagenPerfilRedonda.png" class="profile-icon"></div>
-            </div>
+      <div class="right-header">
+        <span class="texto-servicios">Ofrecer Servicios</span>
+        <div class="icono-perfil">
+          <img src="../../img/imagenPerfilRedonda.png" class="profile-icon" />
         </div>
+      </div>
     </header>
 
     <section class="hero">
+      <video class="hero-video-izquierda" autoplay muted loop  width="1000">
+        <source src="../../mp4/prueba.mp4" type="video/mp4">
+        Tu navegador no soporta videos.
+      </video>
+      <div class="hero-content">
         <h2>Conecta el talento con las oportunidades</h2>
+        <p>Conectamos tus talentos con las oportunidades<br>
+        que te ofrecen otras personas</p>
         <div class="search-container">
-            <div class="search-bar">
-                <input type="text" placeholder="¿Que servicio necesitas?">
-                <button>Buscar</button>
-            </div>
+
+          <div class="search-bar">
+            <input type="text" placeholder="¿Qué servicio necesitas?" />
+            <button>Buscar</button>
+          </div>
         </div>
+      </div>
     </section>
 
     <div class="container">
-        <h2>OFERTAS ACTUALES</h2>
-        <section class="courses">
-            <div class="course">
-                <img src="../../img/image1.png" alt="Diseñador">
-                <h3>Diseñador</h3>
-                <p>Busco diseñador gráfico para proyecto web.</p>
-                <div class="course-footer">
-                    <span class="price">8€</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-            <div class="course">
-                <img src="../../img/img2.png" alt="Limpieza">
-                <h3>Limpieza</h3>
-                <p>Se necesita personal para limpieza de oficinas.</p>
-                <div class="course-footer">
-                    <span class="price">6€/h</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-            <div class="course">
-                <img src="../../img/img3.png" alt="Diseñador">
-                <h3>Diseñador</h3>
-                <p>Busco diseñador gráfico para proyecto web.</p>
-                <div class="course-footer">
-                    <span class="price">47€/h</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-        </section>
+      <h2>OFERTAS ACTUALES</h2>
+      <section class="courses">
+        <div class="course">
+          <img src="../../img/image1.jpg" alt="Diseñador" />
+          <h3>Diseñador</h3>
+          <p>Busco diseñador gráfico para proyecto web.</p>
+          <div class="course-footer">
+            <span class="price">8€</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+        <div class="course">
+          <img src="../../img/img2.jpg" alt="Limpieza" />
+          <h3>Limpieza</h3>
+          <p>Se necesita personal para limpieza de oficinas.</p>
+          <div class="course-footer">
+            <span class="price">6€/h</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+        <div class="course">
+          <img src="../../img/img3.jpg" alt="Diseñador" />
+          <h3>Diseñador</h3>
+          <p>Busco diseñador gráfico para proyecto web.</p>
+          <div class="course-footer">
+            <span class="price">47€/h</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+      </section>
 
-        <h3>Servicios destacados</h3>
-        <section class="courses">
-            <div class="course">
-                <img src="../../img/img4.png" alt="Peluquero">
-                <h3>Peluquero</h3>
-                <p>Peluquero 24h pide cita cuando mas falta te haga.</p>
-                <div class="course-footer">
-                    <span class="price">15€</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-            <div class="course">
-                <img src="../../img/img5.png" alt="Profesor">
-                <h3>Profesor</h3>
-                <p>Profesor particular para cualquier tipo de asignatura.</p>
-                <div class="course-footer">
-                    <span class="price">Negociable</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-            <div class="course">
-                <img src="../../img/img6.png" alt="Mecanico">
-                <h3>Mecánico</h3>
-                <p>Mecánico con mucha experiéncia para todas las necesidades.</p>
-                <div class="course-footer">
-                    <span class="price">50€/h</span>
-                    <button>Reservar</button>
-                </div>
-            </div>
-        </section>
+      <h3>Servicios destacados</h3>
+      <section class="courses">
+        <div class="course">
+          <img src="../../img/img4.png" alt="Peluquero" />
+          <h3>Peluquero</h3>
+          <p>Peluquero 24h pide cita cuando mas falta te haga.</p>
+          <div class="course-footer">
+            <span class="price">15€</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+        <div class="course">
+          <img src="../../img/img5.png" alt="Profesor" />
+          <h3>Profesor</h3>
+          <p>Profesor particular para cualquier tipo de asignatura.</p>
+          <div class="course-footer">
+            <span class="price">Negociable</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+        <div class="course">
+          <img src="../../img/img6.png" alt="Mecanico" />
+          <h3>Mecánico</h3>
+          <p>Mecánico con mucha experiéncia para todas las necesidades.</p>
+          <div class="course-footer">
+            <span class="price">50€/h</span>
+            <button>Reservar</button>
+          </div>
+        </div>
+      </section>
 
-        <h3>¡Tendencias ahora!</h3>
-        <p><i>Proximamente...</i></p>
+      <h3>¡Tendencias ahora!</h3>
+      <p><i>Proximamente...</i></p>
     </div>
     <footer>
-        Español (España) © 2025 TaskLink from Alex&Gabi
+      <span>Español (España) © 2025 TaskLink from Alex&Gabi</span>
     </footer>
-</body>
+  </body>
 </html>
