--- a/act/HTML/index.html
+++ b/act/HTML/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="hero">
-      <video class="hero-video" autoplay muted loop width="1000">
+      <video class="hero-video" autoplay muted loop>
         <source src="../../mp4/prueba2.mp4" type="video/mp4" />
         Tu navegador no soporta videos.
       </video>
