Co-authored-by: GabiVilaplana <GabiVilaplana@users.noreply.github.com>

--- a/act/HTML/index.html
+++ b/act/HTML/index.html
@@ -5,7 +5,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TaskLink</title>
-    <link rel="stylesheet" href="../CSS/index.css" />
+    <link rel="stylesheet" href="../CSS/indexcopia.css" />
   </head>
 
   <body>
@@ -36,7 +36,7 @@
         <div class="search-container">
           <div class="search-bar">
             <input type="text" placeholder="¿Qué servicio necesitas?" />
-            <button>Buscar</button>
+            <button class="btnSearch-bar">Buscar</button>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
     <div class="container">
       <h2>OFERTAS ACTUALES</h2>
       <section class="courses">
-        <div class="course-completo">
+        <div class="course-completo category-diseñador">
           <div class="course">
             <img src="../../img/image1.jpg" alt="Diseñador" />
             <h3>Diseñador</h3>
@@ -71,7 +71,7 @@
             <button>Contactar</button>
           </div>
         </div>
-        <div class="course-completo">
+        <div class="course-completo category-limpieza">
           <div class="course">
             <img src="../../img/img2.jpg" alt="Limpieza" />
             <h3>Limpieza</h3>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="course-completo">
+        <div class="course-completo category-diseñador">
           <div class="course">
             <img src="../../img/img3.jpg" alt="Diseñador" />
             <h3>Diseñador</h3>
@@ -128,7 +128,7 @@
 
       <h3>Servicios destacados</h3>
       <section class="courses">
-        <div class="course-completo">
+        <div class="course-completo category-peluquero">
           <div class="course">
             <img src="../../img/img4.png" alt="Peluquero" />
             <h3>Peluquero</h3>
@@ -155,7 +155,7 @@
           </div>
       </div>
 
-        <div class="course-completo">
+        <div class="course-completo category-profesor">
           <div class="course">
             <img src="../../img/img5.png" alt="Profesor" />
             <h3>Profesor</h3>
@@ -183,7 +183,7 @@
           </div>
         </div>
 
-        <div class="course-completo">
+        <div class="course-completo category-mecanico">
           <div class="course">
             <img src="../../img/img6.png" alt="Mecanico" />
             <h3>Mecánico</h3>
